syntax = "proto3";

import public "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.athenian.chunker";

package org.athenian;

message UploadImageRequest {
    oneof test_oneof {
        // Changes to the field names meta, data, and summary are hard-coded in the impl code
        MetaData meta = 1;
        ChunkData data = 2;
        SummaryData summary = 3;
    }
}

message MetaData {
    string auth = 1;
    string file_name = 2;
    string image_format = 3;
}

message ChunkData {
    int32 chunk_count = 1;
    int32 chunk_byte_count = 2;
    int64 chunk_checksum = 3;
    bytes chunk_bytes = 4;
}

message SummaryData {
    int32 summary_chunk_count = 1;
    int32 summary_byte_count = 2;
    int64 summary_checksum = 3;
}

service Chunker {
    rpc UploadImage (stream UploadImageRequest) returns (google.protobuf.Empty);
}